# cncpen

./: .gitignore  job.yaml  pyproject.toml
src/cncpen/: __init__.py  __main__.py  cli.py  config.py  dxf.py  fills.py  filters.py  geometry.py  machine.py  pen.py  pipeline.py  utils.py
src/cncpen/plugins/: __init__.py  chaotic_fill.py  chladni_fill.py  concentric_fill.py  grid_fill.py  hilbert_fill.py  lichtenberg_fill.py  morphing_grid.py  peano_fill.py  penrose.py  photo_hatch_fill.py  photo_stipple_fill.py  photo_tsp_fill.py  photo_wave_fill.py  sacred_fill.py  sine_fill.py  spiral_fill.py  voronoi_fill.py  zentangle_fill.py  zigzag_fill.py
src/cncpen/plugins/fills/basic/: concentric.py  zigzag.py
src/cncpen/plugins/fills/fractals/: chaotic.py  hilbert.py  lichtenberg.py  peano.py  penrose.py
src/cncpen/plugins/fills/geometric/: grid.py  hexagon.py  triangle.py  voronoi.py  voronoi_dual.py
src/cncpen/plugins/fills/math/: chladni.py  flow_field.py  guilloche.py  sine.py  spiral.py
src/cncpen/plugins/fills/other/: morphing_grid.py  sacred.py  venation.py  zentangle.py
src/cncpen/plugins/modifications/: fisheye.py  image_mask.py  roughen.py
src/cncpen/presets/: contour.yaml  flow-test.yaml  guilloche-test.yaml  spiral_grid.yaml  spoked-mandala.yaml  topo-terrain.yaml  venation.yaml
src/cncpen/presets/basic/: concentric.yaml  contour.yaml
src/cncpen/presets/test/: flow-test.yaml  gridded_spirals.yaml  guilloche-test.yaml  security-cylinder.yaml  spiral_grid.yaml  spoked-mandala.yaml  topo-terrain.yaml  venation.yaml
(+13 files in other folders)
